UsabilityInitiative: Fix bug where the header dropdown always adds headers to the top in IE by moving the onclick handler from the wrapping dropdown <div> to the label <div> and making the latter an <a>. Apparently IE resets the selection in the iframe when you click on a <div> or <a> in the main document; <a href="#"> and <img> are fine though. Also fix ownline bugs in encapsulateSelection: it wasn't detecting the start/end of lines right, inserting newlines wrongly in certain cases.
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk/extensions/UsabilityInitiative@61491 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/css/wikiEditor.toolbar.css
+++ b/css/wikiEditor.toolbar.css
@@ -198,6 +198,7 @@ body.rtl .wikiEditor-ui-toolbar .group > .tool-select {
 	padding-right: 22px;
 	margin-right: 4px;
 	cursor: pointer;
+	text-decoration: none;
 	color: #333333;
 }
 body.rtl .wikiEditor-ui-toolbar .group .tool-select .label {
